--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/corporate-governance.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/corporate-governance.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="넥슨게임즈">
   <link rel="shortcut icon" href="images/favicon/favicon.ico?v=2">
   <link rel="apple-touch-icon-precomposed" href="images/favicon/favicon.ico?v=2">
-  <title>넥슨게임즈</title>
+  <title>기업지배구조 | 넥슨게임즈</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
                 <li><a href="#">주가정보</a></li>
                 <li><a href="#">재무정보</a></li>
                 <li><a href="#">공시/실적</a></li>
-                <li><a href="#">공고</a></li>
+                <li><a href="account-list.html">공고</a></li>
               </ul>
             </li>
             <li>
@@ -136,7 +136,7 @@
                 <li><a href="#">주가정보</a></li>
                 <li><a href="#">재무정보</a></li>
                 <li><a href="#">공시/실적</a></li>
-                <li><a href="#">공고</a></li>
+                <li><a href="account-list.html">공고</a></li>
               </ul>
             </li>
             <li>
@@ -169,34 +169,6 @@
             <span>Home</span><span>투자정보</span><span>기업지배구조</span>
           </p>
           <h2>기업지배구조</h2>
-          <!-- <form>
-            <fieldset>
-              <legend>게시물 검색</legend>
-              <div class="board_search">
-                <div class="select_wrap">
-                  <select>
-                    <option value="">전체 카테고리</option>
-                    <option value="넥슨게임즈">넥슨게임즈</option>
-                    <option value="V4"> V4</option>
-                    <option value="서든어택">서든어택</option>
-                    <option value="블루 아카이브">블루 아카이브</option>
-                    <option value="AxE">AxE</option>
-                    <option value="히트2">히트2</option>
-                    <option value="베일드 엑스퍼트">베일드 엑스퍼트</option>
-                    <option value="퍼스트 디센던트">퍼스트 디센던트</option>
-                    <option value="갓썸">갓썸</option>
-                    <option value="프로젝트 DX">프로젝트 DX</option>
-                  </select>
-                </div>
-                <div class="search_wrap">
-                  <input type="search" placeholder="검색어를 입력해주세요.">
-                  <button class="search_btn">
-                    <span class="blind">검색</span>
-                  </button>
-                </div>
-              </div>
-            </fieldset>
-          </form> -->
         </div>
       </div>
       <div class="contents">
@@ -209,13 +181,13 @@
             </div>
           </div>
           <div class="stock_wrap">
-            <div class="tit_wrap">
+            <div class="tit_wrap stock_holder_total">
               <h3>주주 현황</h3>
               <div class="date">
                 <p>2023.12.31 기준</p>
               </div>
             </div>
-            <div class="board_list">
+            <div class="tbl">
               <table>
                 <caption>주요 주주</caption>
                 <thead>
@@ -257,7 +229,7 @@
             <div class="tit_wrap">
               <h3>이사회 구성</h3>
             </div>
-            <div class="board_list council">
+            <div class="tbl council">
               <table>
                 <caption>이사회 구성</caption>
                 <thead>
@@ -286,11 +258,11 @@
                     <td>강인수</td>
                     <td>CFO</td>
                     <td>
-                      <span>(주)엔씨소프트 실장</span>
-                      <span>(주)블루홀스튜디오 실장</span>
-                      <span>(주)CJ라다스튜디오 PD</span>
+                      <span>(주)넥슨코리아 지원본부장</span>
+                      <span>(주)넥슨커뮤니케이션즈 대표이사</span>
+                      <span>(주)엔미디어플랫폼 대표이사</span>
                       <span>現) (주)중앙판교개발 대표이사</span>
-                      <span>現) (주)넥슨게임즈 대표이사</span>
+                      <span>現) (주)넥슨게임즈 CFO</span>
                     </td>
                   </tr>
                   <tr>
@@ -298,11 +270,10 @@
                     <td>김명현</td>
                     <td>개발이사</td>
                     <td>
-                      <span>(주)엔씨소프트 실장</span>
-                      <span>(주)블루홀스튜디오 실장</span>
-                      <span>(주)CJ라다스튜디오 PD</span>
-                      <span>現) (주)중앙판교개발 대표이사</span>
-                      <span>現) (주)넥슨게임즈 대표이사</span>
+                      <span>(주)넥슨 개발팀장</span>
+                      <span>넥슨지티(주) 개발실장</span>
+                      <span>(주)네오플 대표이사</span>
+                      <span>現) (주)넥슨게임즈 개발이사</span>
                     </td>
                   </tr>
                   <tr>
@@ -310,11 +281,10 @@
                     <td>이남주</td>
                     <td>주요사항 결정</td>
                     <td>
-                      <span>(주)엔씨소프트 실장</span>
-                      <span>(주)블루홀스튜디오 실장</span>
-                      <span>(주)CJ라다스튜디오 PD</span>
-                      <span>現) (주)중앙판교개발 대표이사</span>
-                      <span>現) (주)넥슨게임즈 대표이사</span>
+                      <span>법무법인(유) 세종 공인회계사</span>
+                      <span>회계법인 세종 공인회계사</span>
+                      <span>現) 법무법인(유) 세종 선임 공인회계사</span>
+                      <span>現) (주)넥슨게임즈 사외이사</span>
                     </td>
                   </tr>
                   <tr>
@@ -322,11 +292,12 @@
                     <td>양안수</td>
                     <td>감사</td>
                     <td>
-                      <span>(주)엔씨소프트 실장</span>
-                      <span>(주)블루홀스튜디오 실장</span>
-                      <span>(주)CJ라다스튜디오 PD</span>
-                      <span>現) (주)중앙판교개발 대표이사</span>
-                      <span>現) (주)넥슨게임즈 대표이사</span>
+                      <span>KPMG삼정회계법인</span>
+                      <span>EY한영회계법인 이사</span>
+                      <span>호연회계법인 대표이사</span>
+                      <span>現) (주)디앤씨미디어 감사</span>
+                      <span>現) 지우회계법인 대표이사</span>
+                      <span>現) (주)넥슨게임즈 감사</span>
                     </td>
                   </tr>
                 </tbody>
@@ -367,7 +338,7 @@
                   <li><a href="#">넥슨게임즈</a></li>
                 </ul>
               </li>
-              <li class="wide_menu">
+              <li>
                 <a href="#">게임</a>
                  <ul class="menu_list">
                   <li><a href="#">V4</a></li>
@@ -388,13 +359,13 @@
                 </ul>
               </li>
                <li>
-                <a href="#">투자정보</a>
+                <a href="corporate-governance.html">투자정보</a>
                 <ul class="menu_list">
-                  <li><a href="#">기업지배구조</a></li>
+                  <li><a href="corporate-governance.html">기업지배구조</a></li>
                   <li><a href="#">주가정보</a></li>
                   <li><a href="#">재무정보</a></li>
                   <li><a href="#">공시/실적</a></li>
-                  <li><a href="#">공고</a></li>
+                  <li><a href="account-list.html">공고</a></li>
                 </ul>
               </li>
               <li>
