--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/index.html
@@ -72,7 +72,7 @@
                 <li><a href="#">주가정보</a></li>
                 <li><a href="#">재무정보</a></li>
                 <li><a href="#">공시/실적</a></li>
-                <li><a href="#">공고</a></li>
+                <li><a href="account-list.html">공고</a></li>
               </ul>
             </li>
             <li>
@@ -133,7 +133,7 @@
                 <li><a href="#">주가정보</a></li>
                 <li><a href="#">재무정보</a></li>
                 <li><a href="#">공시/실적</a></li>
-                <li><a href="#">공고</a></li>
+                <li><a href="account-list.html">공고</a></li>
               </ul>
             </li>
             <li>
@@ -329,7 +329,7 @@
                   넥슨게임즈에게 '퍼스트 디센던트'란? "글로벌 속 해답지"
                 </a>
                 <p class="txt">
-                  넥슨의 올해 첫 글로벌 선봉장 역할을맡은 타이틀은 넥슨게임즈가 개발한 ‘퍼스트 디센던트’다. 3인칭 루트슈터 장르로 지난해 두 번의 테스트를 거쳐 올해 여름 출시를 확정 지은 상태다.
+                  넥슨의 올해 첫 글로벌 선봉장 역할을 맡은 타이틀은 넥슨게임즈가 개발한 ‘퍼스트 디센던트’다. 3인칭 루트슈터 장르로 지난해 두 번의 테스트를 거쳐 올해 여름 출시를 확정 지은 상태다.
                 </p>
               </div>
             </li>
@@ -401,7 +401,7 @@
                   <li><a href="#">넥슨게임즈</a></li>
                 </ul>
               </li>
-              <li class="wide_menu">
+              <li>
                 <a href="#">게임</a>
                  <ul class="menu_list">
                   <li><a href="#">V4</a></li>
@@ -422,13 +422,13 @@
                 </ul>
               </li>
                <li>
-                <a href="#">투자정보</a>
+                <a href="corporate-governance.html">투자정보</a>
                 <ul class="menu_list">
-                  <li><a href="#">기업지배구조</a></li>
+                  <li><a href="corporate-governance.html">기업지배구조</a></li>
                   <li><a href="#">주가정보</a></li>
                   <li><a href="#">재무정보</a></li>
                   <li><a href="#">공시/실적</a></li>
-                  <li><a href="#">공고</a></li>
+                  <li><a href="account-list.html">공고</a></li>
                 </ul>
               </li>
               <li>
