--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/login.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/nexongames반응형_강인구/login.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="넥슨게임즈">
   <link rel="shortcut icon" href="images/favicon/favicon.ico?v=2">
   <link rel="apple-touch-icon-precomposed" href="images/favicon/favicon.ico?v=2">
-  <title>넥슨게임즈</title>
+  <title>넥슨게임즈 로그인</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
                 <li><a href="#">주가정보</a></li>
                 <li><a href="#">재무정보</a></li>
                 <li><a href="#">공시/실적</a></li>
-                <li><a href="#">공고</a></li>
+                <li><a href="account-list.html">공고</a></li>
               </ul>
             </li>
             <li>
@@ -136,7 +136,7 @@
                 <li><a href="#">주가정보</a></li>
                 <li><a href="#">재무정보</a></li>
                 <li><a href="#">공시/실적</a></li>
-                <li><a href="#">공고</a></li>
+                <li><a href="account-list.html">공고</a></li>
               </ul>
             </li>
             <li>
@@ -168,6 +168,7 @@
           <div class="logo_wrap">
             <h1 class="logo">
               <a href="index.html"></a>
+              <span class="blind">넥슨로고</span>
             </h1>
             <ul class="login_type">
               <li class="active"><a href="#">넥슨ID 로그인</a></li>
@@ -232,7 +233,7 @@
                   <li><a href="#">넥슨게임즈</a></li>
                 </ul>
               </li>
-              <li class="wide_menu">
+              <li>
                 <a href="#">게임</a>
                  <ul class="menu_list">
                   <li><a href="#">V4</a></li>
@@ -253,13 +254,13 @@
                 </ul>
               </li>
                <li>
-                <a href="#">투자정보</a>
+                <a href="corporate-governance.html">투자정보</a>
                 <ul class="menu_list">
-                  <li><a href="#">기업지배구조</a></li>
+                  <li><a href="corporate-governance.html">기업지배구조</a></li>
                   <li><a href="#">주가정보</a></li>
                   <li><a href="#">재무정보</a></li>
                   <li><a href="#">공시/실적</a></li>
-                  <li><a href="#">공고</a></li>
+                  <li><a href="account-list.html">공고</a></li>
                 </ul>
               </li>
               <li>
