--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/release-view.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/release-view.html
@@ -176,109 +176,24 @@
       </div>
       <div class="contents">
         <div class="inner">
-          <form>
-            <fieldset>
-              <legend>게시물 검색</legend>
-              <div class="board_search">
-                <div class="select_wrap">
-                  <select>
-                    <option value="tit">제목</option>
-                    <option value="txt">내용</option>
-                    <option value="tit+txt">제목+내용</option>
-                  </select>
-                </div>
-                <div class="search_wrap">
-                  <input type="search" placeholder="검색어를 입력해주세요">
-                  <button class="search_btn">
-                    <span class="blind">검색</span>
-                  </button>
-                </div>
-              </div>
-            </fieldset>
-          </form>
-          <div class="board_list">
-            <table>
-              <caption>유투바이오 소식, 외부 보도자료</caption>
-              <thead>
-                <tr>
-                  <th class="col1">번호</th>
-                  <th class="col2">제목</th>
-                  <th class="col3">조회수</th>
-                  <th class="col4">등록일</th>
-                </tr>
-              </thead>
-              <!-- tbody는 자동 생성되기 때문에 작성하지 않아도 됨 -->
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-              <tr>
-                <td>9999</td>
-                <td class="td_left"><a href="release-view.html">김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</a></td>
-                <td>9999</td>
-                <td class="date">2024-12-12</td>
-              </tr>
-            </table>
-            <div class="board_pagination">
-              <a href="#" class="page_btn first"><span class="blind">첫 페이지</span></a>
-              <a href="#" class="page_btn prev"><span class="blind">이전</span></a>
-              <span class="num active">1</span>
-              <a href="#" class="num">2</a>
-              <a href="#" class="num">3</a>
-              <a href="#" class="num">4</a>
-              <a href="#" class="num">5</a>
-              <a href="#" class="page_btn next"><span class="blind">다음</span></a>
-              <a href="#" class="page_btn last"><span class="blind">마지막 페이지</span></a>
+          <div class="board_view">
+            <div class="view_tit">
+              <h3>김진태 유투바이오 대표 “5년 내 연간 1000억 매출 달성할 것”[상장 새내기 바이오⑤]</h3>
+              <span class="date">2024-03-19</span>
+            </div>
+            <div class="view_con">
+              게시물 내용
+            </div>
+            <dl class="view_paging">
+              <dt>이전글</dt>
+              <dd><a href="#">유투바이오, KIMES 2024에서 'U2Check SMART' 공개할 예정유투바이오, KIMES 2024에서 'U2Check SMART' 공개할 예정유투바이오, KIMES 2024에서 'U2Check SMART' 공개할 예정유투바이오, KIMES 2024에서 'U2Check SMART' 공개할 예정</a></dd>
+            </dl>
+            <dl class="view_paging">
+              <dt>다음글</dt>
+              <dd><a href="#">다음글이 없습니다.</a></dd>
+            </dl>
+            <div class="btn_wrap">
+              <a href="release-list.html" class="point_btn3">목록</a>
             </div>
           </div>
         </div>
