--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/login.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/13_유투바이오(jQuery 마이그레이션, 로그인 페이지, 보도자료)/login.html
@@ -71,9 +71,9 @@
                 <li><a href="#">주주공고</a></li>
               </ul>
             </li>
-            <li><a href="#">미디어센터</a>
+            <li><a href="release-list.html">미디어센터</a>
               <ul class="depth2">
-                <li><a href="#">보도자료</a></li>
+                <li><a href="release-list.html">보도자료</a></li>
                 <li><a href="#">E카달로그</a></li>
               </ul>
             </li>
@@ -133,7 +133,7 @@
             </li>
             <li><a href="#">미디어센터</a>
               <ul class="depth2">
-                <li><a href="#">보도자료</a></li>
+                <li><a href="release-list.html">보도자료</a></li>
                 <li><a href="#">E카달로그</a></li>
               </ul>
             </li>
