--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/넥슨게임즈반응형_강인구/account-view.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/넥슨게임즈반응형_강인구/account-view.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="format-detcntion" content="telephone=no" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="PC, 모바일, 콘솔 플랫폼을 아우르는 다양한 장르의 게임을 개발하는 게임 개발사입니다."
-    />
-    <meta name="keywords" content="넥슨게임즈" />
-    <meta property="og:title" content="넥슨게임즈" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.nexongames.co.kr" />
-    <meta property="og:site_name" content="넥슨게임즈" />
-    <meta property="og:description" content="넥슨게임즈" />
-    <link rel="shortcut icon" href="images/favicon/favicon.ico?v=2" />
-    <link
-      rel="apple-touch-icon-precomposed"
-      href="images/favicon/favicon.ico?v=2"
-    />
+    <meta charset="UTF-8">
+    <meta name="format-detcntion" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="PC, 모바일, 콘솔 플랫폼을 아우르는 다양한 장르의 게임을 개발하는 게임 개발사입니다.">
+    <meta name="keywords" content="넥슨게임즈">
+    <meta property="og:title" content="넥슨게임즈">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.nexongames.co.kr">
+    <meta property="og:site_name" content="넥슨게임즈">
+    <meta property="og:description" content="넥슨게임즈">
+    <link rel="shortcut icon" href="images/favicon/favicon.ico?v=2">
+    <link rel="apple-touch-icon-precomposed" href="images/favicon/favicon.ico?v=2">
     <title>제9기 결산공고 | 넥슨게임즈</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/jquery-ui.min.css" />
-    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/common.css?v=<?php echo time(); ?>" />
-    <link rel="stylesheet" href="css/main.css?v=<?php echo time(); ?>" />
-    <link rel="stylesheet" href="css/sub.css?v=<?php echo time(); ?>" />
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/common.css?v=<?php echo time(); ?>">
+    <link rel="stylesheet" href="css/main.css?v=<?php echo time(); ?>">
+    <link rel="stylesheet" href="css/sub.css?v=<?php echo time(); ?>">
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
@@ -45,7 +33,7 @@
       <header id="header">
         <h1 class="logo">
           <a href="index.html">
-            <img src="images/main_logo.png" alt="메인로고" />
+            <img src="images/main_logo.png" alt="메인로고">
           </a>
         </h1>
         <nav class="gnb_wrap">
@@ -99,7 +87,7 @@
         <div class="lang_wrap">
           <a href="#" class="blog"
             ><img src="images/blog_icon.png" alt="블로그"
-          /></a>
+         ></a>
           <a class="login" href="login.html">로그인</a>
           <ul class="lang">
             <li><a href="#" class="active">KOR</a></li>
@@ -198,11 +186,11 @@
                 <span>게시물 내용</span>
               </div>
               <dl class="file_down">
-                <dt>첨부파일 : </dt>
+                <dt>첨부파일 :</dt>
                 <dd><a href="#">제9기 넥슨게임즈 결산공고별도.pdf</a></dd>
               </dl>
               <dl class="file_down">
-                <dt>첨부파일 : </dt>
+                <dt>첨부파일 :</dt>
                 <dd><a href="#">제9기 넥슨게임즈 결산공고연결.pdf</a></dd>
               </dl>
               <ul class="paging">
@@ -228,25 +216,20 @@
             <div class="col_left">
               <h2 class="logo">
                 <a href="index.html">
-                  <img src="images/footer_logo.png" alt="넥슨" />
+                  <img src="images/footer_logo.png" alt="넥슨">
                 </a>
               </h2>
               <div class="footer_info_wrap">
                 <p class="address">
-                  넥슨게임즈 SEOUL<br />
+                  넥슨게임즈 SEOUL<br>
                   서울특별시 강남구 남부순환로 2621 디앤오 강남빌딩 5층
                 </p>
                 <p class="address">
-                  넥슨게임즈 PANGYO<br />
+                  넥슨게임즈 PANGYO<br>
                   경기 성남시 분당구 판교로 256번길 25 판교 테크노벨리
                 </p>
-                <a
-                  class="award"
-                  href="https://www.gdweb.co.kr/sub/view.asp?displayrow=60&Txt_key=all&Txt_word=&Txt_agnumber=&Txt_fgbn=5&Txt_bcode1=020810001&Txt_gbflag=&Txt_bcode2=&Txt_bcode3=&Txt_bcode4=&Txt_bcode5=&Page=1&str_no=17268"
-                  target="_blank"
-                  title="새창 열림"
-                >
-                  <img src="images/winner_logo.jpg" alt="어워드" />
+                <a href="https://www.gdweb.co.kr/sub/view.asp?displayrow=60&Txt_key=all&Txt_word=&Txt_agnumber=&Txt_fgbn=5&Txt_bcode1=020810001&Txt_gbflag=&Txt_bcode2=&Txt_bcode3=&Txt_bcode4=&Txt_bcode5=&Page=1&str_no=17268" target="_blank" title="새창 열림" class="award">
+                  <img src="images/winner_logo.jpg" alt="어워드">
                 </a>
               </div>
             </div>
