--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/넥슨게임즈반응형_강인구/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/05_반응형프로젝트(10일)/넥슨게임즈반응형_강인구/index.html
@@ -163,13 +163,13 @@
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <video src="video/Hit2.mp4" muted loop autoplay playsinline></video>
+              <video src="video/Hit2.mp4" muted autoplay playsinline></video>
             </div>
             <div class="swiper-slide">
-              <video src="video/BlueArchive.mp4" muted loop  playsinline></video>
+              <video src="video/BlueArchive.mp4" muted autoplay playsinline></video>
             </div>
             <div class="swiper-slide">
-              <video src="video/FirstDescendant.mp4" muted loop  playsinline></video>
+              <video src="video/FirstDescendant.mp4" muted playsinline></video>
             </div>
           </div>
           <div class="pagination_wrap">
