--- a/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/14_빙그레(컬럼슬라이더그리드변경)/index.html
+++ b/클라우드(AWS) 환경에서 개발하는 풀스택(프론트엔드, 백엔드) 자바(JAVA) 웹, 앱/04_jQuery,swiper(5일)/14_빙그레(컬럼슬라이더그리드변경)/index.html
@@ -21,14 +21,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/jquery-ui.min.css">
   <link rel="stylesheet" href="css/aos.css">
-  <!-- 타임스탬프 코드로 캐싱 방지 -->
+  <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/common.css?v=<?php echo time(); ?>">
   <link rel="stylesheet" href="css/main.css?v=<?php echo time(); ?>">
   <script src="js/jquery-3.7.1.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/aos.js"></script>
+  <script src="js/swiper-bundle.min.js"></script>
   <script src="js/ui-common.js?v=<?php echo time(); ?>"></script>
-</head>
+</head> 
 <body>
   <div id="skip_navi">
     <a href="#container">본문 바로가기</a>
@@ -36,6 +37,7 @@
   <div id="wrap">
     <main id="container">
       <section class="main_visual">
+        <h2 class="span">메인 비주얼</h2>
         <div class="inner">
           <img src="images/sec01_logo_5.png" alt="메인 배너" class="pc_img">
           <img src="images/m_sec01_logo_5.png" alt="메인 배너" class="m_img">
@@ -50,6 +52,92 @@
               <a href="#">슈퍼콘</a>
               <a href="#">#요플레</a>
               <a href="#">#아카페라</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="main_product">
+        <div class="inner">
+          <h2>행복한 빙그레의 맛</h2>
+          <div class="swiper_wrap">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="img_wrap">
+                      <img src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png" alt="아이스크림">
+                      <h3>아이스크림</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="img_wrap">
+                      <img src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png" alt="아이스크림">
+                      <h3>우유/치즈</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="img_wrap">
+                      <img src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png" alt="아이스크림">
+                      <h3>발효유</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="img_wrap">
+                      <img src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png" alt="아이스크림">
+                      <h3>아이스크림</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="img_wrap">
+                      <img src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png" alt="아이스크림">
+                      <h3>우유/치즈</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="img_wrap">
+                      <img src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png" alt="아이스크림">
+                      <h3>발효유</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="img_wrap">
+                      <img src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png" alt="아이스크림">
+                      <h3>아이스크림</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="img_wrap">
+                      <img src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png" alt="아이스크림">
+                      <h3>우유/치즈</h3>
+                    </div>
+                  </a>
+                </div>
+                <div class="swiper-slide">
+                  <a href="#">
+                    <div class="img_wrap">
+                      <img src="images/6e5e4881-40ba-4150-ac86-6d61173da0ad.png" alt="아이스크림">
+                      <h3>발효유</h3>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+              <div class="swiper-button-prev arrow_btn"></div>
+              <div class="swiper-button-next arrow_btn"></div>
             </div>
           </div>
         </div>
